--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="images/hoang_to.JPG" alt="Wu" width="150px" />&nbsp;</td>
+<img src="images/hoang_to.jpg" alt="Manh-Hoang TO" width="150px" />&nbsp;</td>
 <td align="left"><h1>Manh-Hoang TO<br /></h1>
 <p>MIS Project Manager/Data Management Expert<br />
   Microsoft Certified Solution Expert in Data Management and Analytics, MCSE</br>
